atualiza seção projetos e sobre mim

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <p>
                         Atualmente estou estudando e desenvolvendo projetos web mais precisamente no Front-End, de modo a ampliar meus conhecimentos e assim aprimorar ainda mais minhas habilidades e migrar para esta carreira.
                     </p>
+                    <p>
+                        Hard skills: HTML, CSS, Sass, Javascript, Typescript e React. 
+                    </p>
                     <div class="btn">
                         <a href="https://www.linkedin.com/in/arydiane-jardim-23b723238/" target="_blank">Meu perfil no Linkedin</a>
                     </div>
@@ -51,72 +54,6 @@
         <section id="projects" class="sections">
             <h2 class="subtitle">Projetos</h2>
             <div id="container-projects">
-                <div class="card-project">
-                    <img src="img/pagina-portfolio.jpg" alt="Projeto Meu Portfólio" class="img-project">
-                    <h3 class="title-project">Meu portfólio</h3>
-                    <p class="project-description">
-                        Meu portfólio criado com o objetivo de mostrar meus projetos.
-                    </p>
-                    <p class="project-technologies">
-                        Tecnologias: <strong>HTML</strong> e <strong>CSS</strong>
-                    </p>
-                    <div class="btn">
-                        <a href="https://github.com/Arydiane/freeCodeCamp/tree/main/projeto-final-portfolio" target="_blank">Ver no GitHub</a>
-                    </div>
-                </div>
-                <div class="card-project">
-                    <img src="img/pagina-produto.jpg" alt="Projeto Página para um produto" class="img-project">
-                    <h3 class="title-project">Página Inicial para um Produto</h3>
-                    <p class="project-description">
-                        Projeto de uma página inicial para a comercialização de um produto.
-                    </p>
-                    <p class="project-technologies">
-                        Tecnologias: <strong>HTML</strong> e <strong>CSS</strong>
-                    </p>
-                    <div class="btn">
-                        <a href="https://github.com/Arydiane/freeCodeCamp/tree/main/projeto-pagina-produto" target="_blank">Ver no GitHub</a>
-                    </div>
-                </div>
-                <div class="card-project">
-                    <img src="img/pagina-homenagem.jpg" alt="Projeto Página de Homenagem" class="img-project">
-                    <h3 class="title-project">Página de Homenagem</h3>
-                    <p class="project-description">
-                        Neste projeto foi criada uma página de tributo para Ada Lovelace.
-                    </p>
-                    <p class="project-technologies">
-                        Tecnologias: <strong>HTML</strong> e <strong>CSS</strong>
-                    </p>
-                    <div class="btn">
-                        <a href="https://github.com/Arydiane/freeCodeCamp/tree/main/pagina-homenagem" target="_blank" >Ver no GitHub</a>
-                    </div>
-                </div>
-                <div class="card-project">
-                    <img src="img/pagina-formulario.jpg" alt="Projeto Formulário de Pesquisa" class="img-project">
-                    <h3 class="title-project">Formulário de Pesquisa</h3>
-                    <p class="project-description">
-                        Projeto de um formulário de pesquisa para coletar dados de usuários.
-                    </p>
-                    <p class="project-technologies">
-                        Tecnologias: <strong>HTML</strong> e <strong>CSS</strong>
-                    </p>
-                    <div class="btn">
-                        <a href="https://github.com/Arydiane/freeCodeCamp/tree/main/projeto-final-formulário" target="_blank">Ver no GitHub</a>
-                    </div>
-                </div>
-                <div class="card-project">
-                    <img src="img/pagina-documentacao.jpg" alt="Projeto de página de Documentação Técnica" class="img-project">
-                    <h3 class="title-project">Documentação Técnica</h3>
-                    <p class="project-description">
-                        Projeto de uma página de documentação técnica sobre HTML. 
-                    </p>
-                    <p class="project-technologies">
-                        Tecnologias: <strong>HTML</strong> e <strong>CSS</strong>
-                    </p>
-                    <div class="btn">
-                        <a href="https://github.com/Arydiane/freeCodeCamp/tree/main/projeto-documentacao-tecnica" target="_blank" >Ver no GitHub</a>
-                    </div>
-                    
-                </div>
             </div>
         </section>
         <section id="contact" class="sections">
@@ -143,6 +80,6 @@
         <p>Copyright &copy; 2022 Todos os direitos reservados | Este site foi desenvolvido por Arydiane Jardim</p>
         <a href="https://br.freepik.com/fotos-vetores-gratis/conexoes" target="_blank">Créditos: Conexões foto criado por kjpargeter - br.freepik.com</a>
     </footer>
-    
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
