atualiza seção contato

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                     <a href="https://www.linkedin.com/in/arydiane-jardim-23b723238" target="_blank"><img src="img/icone-linkedin.png" alt="Ícone do Linkedin" class="icon"></a>
                     <a href="https://www.instagram.com/arydianejardim/" target="_blank"><img src="img/icone-instagram.png" alt="Ícone do Instagram" class="icon"></a>
                 </div>
-                <div id="whatsapp">
-                    <h3>WhatsApp</h3>
-                    <p>(22) 99999-9999</p>
+                <div id="address">
+                    <h3>Endereço</h3>
+                    <p>Rio das Ostras - RJ</p>
                 </div>
             </div>
         </section>
