atualiza seção sobre mim

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="img/foto-perfil.jpg" alt="Foto de Arydiane" class="img">
                 <div id="about-me-text">
                     <p>
-                        Meu nome é Arydiane Jardim. Sou formada em Licenciatura em <strong>Computação</strong> pela Universidade Federal Fluminense - UFF e <strong>Técnica em informática</strong> pela FAETEC/RJ.
+                        Meu nome é Arydiane Jardim. Sou formada em Licenciatura em <strong>Computação</strong> pela Universidade Federal Fluminense - UFF, <strong>Técnica em informática</strong> pela FAETEC/RJ e Pós-Graduada em <strong> Tutoria em Educação a Distância</strong> pela Faculdade São Luís.
                     </p>
                     <p>
                         Atualmente estou estudando e desenvolvendo projetos web mais precisamente no Front-End, de modo a ampliar meus conhecimentos e assim aprimorar ainda mais minhas habilidades e migrar para esta carreira.
