--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div id="container-contact">
                 <div id="contact-text">
                     <h3>Fale comigo</h3>
-                    <p>E-mail: arydianejardim@gmail.com</p>
+                    <a href="mailto:arydianejardim@gmail.com">E-mail: arydianejardim@gmail.com</a>
                 </div>
                 <div id="redes-sociais-links">
                     <h3>Redes Sociais</h3>
@@ -69,10 +69,10 @@
                     <a href="https://www.linkedin.com/in/arydiane-jardim-23b723238" target="_blank"><img src="img/icone-linkedin.png" alt="Ícone do Linkedin" class="icon"></a>
                     <a href="https://www.instagram.com/arydianejardim/" target="_blank"><img src="img/icone-instagram.png" alt="Ícone do Instagram" class="icon"></a>
                 </div>
-                <div id="address">
+                <address>
                     <h3>Endereço</h3>
                     <p>Rio das Ostras - RJ</p>
-                </div>
+                </address>
             </div>
         </section>
     </main>
