reorganiza arquivos em pastas

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Portfólio</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Portfólio Arydiane Jardim</title>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
     <main>
         <section id="welcome-section">
             <div id="welcome-text">
-                <h1 >Olá, eu sou <br>Arydiane Jardim</h1>
+                <h1>Olá, eu sou <br>Arydiane Jardim</h1>
                 <p>Desenvolvedora Front-End.</p>
             </div>
         </section>
@@ -36,20 +36,24 @@
                 <img src="img/foto-perfil.jpg" alt="Foto de Arydiane" class="img">
                 <div id="about-me-text">
                     <p>
-                        Meu nome é Arydiane Jardim. Sou formada em Licenciatura em <strong>Computação</strong> pela Universidade Federal Fluminense - UFF, <strong>Técnica em informática</strong> pela FAETEC/RJ e Pós-Graduada em <strong> Tutoria em Educação a Distância</strong> pela Faculdade São Luís.
+                        Meu nome é Arydiane Jardim. Sou formada em Licenciatura em <strong>Computação</strong> pela
+                        Universidade Federal Fluminense - UFF, <strong>Técnica em informática</strong> pela FAETEC/RJ e
+                        Pós-Graduada em <strong> Tutoria em Educação a Distância</strong> pela Faculdade São Luís.
                     </p>
                     <p>
-                        Atualmente estou estudando e desenvolvendo projetos web mais precisamente no Front-End, de modo a ampliar meus conhecimentos e assim aprimorar ainda mais minhas habilidades e migrar para esta carreira.
+                        Atualmente estou estudando e desenvolvendo projetos web mais precisamente no Front-End, de modo
+                        a ampliar meus conhecimentos e assim aprimorar ainda mais minhas habilidades e migrar para esta
+                        carreira.
                     </p>
                     <p>
-                        Hard skills: HTML, CSS, Sass, Javascript, Typescript e React. 
+                        Hard skills: HTML, CSS, Sass, Javascript, Typescript e React.
                     </p>
                     <div class="btn">
-                        <a href="https://www.linkedin.com/in/arydiane-jardim-23b723238/" target="_blank">Meu perfil no Linkedin</a>
+                        <a href="https://www.linkedin.com/in/arydiane-jardim-23b723238/" target="_blank">Meu perfil no
+                            Linkedin</a>
                     </div>
                 </div>
             </div>
-
         </section>
         <section id="projects" class="sections">
             <h2 class="subtitle">Projetos</h2>
@@ -65,9 +69,12 @@
                 </div>
                 <div id="redes-sociais-links">
                     <h3>Redes Sociais</h3>
-                    <a href="https://github.com/Arydiane" target="_blank"><img src="img/icone-github.png" alt="Ícone do Github" class="icon"></a>
-                    <a href="https://www.linkedin.com/in/arydiane-jardim-23b723238" target="_blank"><img src="img/icone-linkedin.png" alt="Ícone do Linkedin" class="icon"></a>
-                    <a href="https://www.instagram.com/arydianejardim/" target="_blank"><img src="img/icone-instagram.png" alt="Ícone do Instagram" class="icon"></a>
+                    <a href="https://github.com/Arydiane" target="_blank"><img src="img/icone-github.png"
+                            alt="Ícone do Github" class="icon"></a>
+                    <a href="https://www.linkedin.com/in/arydiane-jardim-23b723238" target="_blank"><img
+                            src="img/icone-linkedin.png" alt="Ícone do Linkedin" class="icon"></a>
+                    <a href="https://www.instagram.com/arydianejardim/" target="_blank"><img
+                            src="img/icone-instagram.png" alt="Ícone do Instagram" class="icon"></a>
                 </div>
                 <address>
                     <h3>Endereço</h3>
@@ -78,8 +85,9 @@
     </main>
     <footer>
         <p>Copyright &copy; 2022 Todos os direitos reservados | Este site foi desenvolvido por Arydiane Jardim</p>
-        <a href="https://br.freepik.com/fotos-vetores-gratis/conexoes" target="_blank">Créditos: Conexões foto criado por kjpargeter - br.freepik.com</a>
+        <a href="https://br.freepik.com/fotos-vetores-gratis/conexoes" target="_blank">Créditos: Conexões foto criado
+            por kjpargeter - br.freepik.com</a>
     </footer>
-    <script src="./main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
